# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1+

option('tpm', type : 'boolean',
       description : 'TPM should be used to log events and extend the registers')

option('gnu-efi', type : 'combo', choices : ['auto', 'true', 'false'],
       description : 'gnu-efi support for sd-boot')
option('efi-cc', type : 'array',
       description : 'the compiler to use for EFI modules')
option('efi-ld', type : 'string',
       description : 'the linker to use for EFI modules')
option('efi-libdir', type : 'string',
       description : 'path to the EFI lib directory')
option('efi-ldsdir', type : 'string',
       description : 'path to the EFI lds directory')
option('efi-includedir', type : 'string', value : '/usr/include/efi',
       description : 'path to the EFI header directory')
option('tpm-pcrindex', type : 'integer', value : 8,
       description : 'TPM PCR register number to use')

option('tests', type : 'combo', choices : ['true', 'false'],
       description : 'enable tests')
