# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1+
#
# Copyright 2017 Zbigniew Jędrzejewski-Szmek
#
# systemd is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or
# (at your option) any later version.
#
# systemd is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with systemd; If not, see <http://www.gnu.org/licenses/>.

option('gnu-efi', type : 'combo', choices : ['auto', 'true', 'false'],
       description : 'gnu-efi support for sd-boot')
option('efi-cc', type : 'string', value : 'gcc',
       description : 'the compiler to use for EFI modules')
option('efi-ld', type : 'string', value : 'ld',
       description : 'the linker to use for EFI modules')
option('efi-libdir', type : 'string',
       description : 'path to the EFI lib directory')
option('efi-ldsdir', type : 'string',
       description : 'path to the EFI lds directory')
option('efi-includedir', type : 'string', value : '/usr/include/efi',
       description : 'path to the EFI header directory')
